# laba8

./: 8В42_Програм_ЛБ№8_Кирпу.docx  CMakeLists.txt
task1/: CMakeLists.txt  main.cpp  students.txt  voting.cpp  voting.h
task2/: CMakeLists.txt  main.cpp  task2.cpp  task2.h
task3/: main.cpp  task3.cpp  task3.h
